--- a/DS_Questions/Questions/Strings/SubString_SubSequence/SubString_SubArray/Largest_Odd_Number_in_String.adoc
+++ b/DS_Questions/Questions/Strings/SubString_SubSequence/SubString_SubArray/Largest_Odd_Number_in_String.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-== link:https://leetcode.com/problems/largest-odd-number-in-string/[https://leetcode.com/problems/largest-odd-number-in-string/]
+== link:https://leetcode.com/problems/largest-odd-number-in-string/[1903. Largest Odd Number in String]
 You are given a string num, representing a large integer. Return the largest-valued odd integer (as a string) that is a non-empty substring of num, or an empty string "" if no odd integer exists.
 
 A substring is a contiguous sequence of characters within a string.
